# android_camera_v4l2

./: README.md  build.gradle  config.gradle  settings.gradle
doc/apk/: android_v4l2_camera.apk  sample_camera_v4l2_v21051216_debug.apk
doc/temp/: Camera.cpp  Camera.h  DecoderJp.cpp  DecoderJp.h  HwDecoder.cpp  RenderDEPTH.java  RenderNV12.java  RenderRGB.java  RenderRGB2.java  RenderRGB3.java
doc/temp/temp/: Camera.cpp  Camera.h  CameraView.java
gradle/wrapper/: gradle-wrapper.properties
sample/: build.gradle
sample/src/main/: AndroidManifest.xml
sample_camera_v4l2/: build.gradle
sample_camera_v4l2/src/main/: AndroidManifest.xml
sdk_camera_v4l2/: build.gradle
sdk_camera_v4l2/src/main/: AndroidManifest.xml
sdk_camera_v4l2/src/main/assets/: beauty_fragment.glsl  camera_fragment.glsl  camera_vertex.glsl
sdk_camera_v4l2/src/main/cpp/: CMakeLists.txt
sdk_camera_v4l2/src/main/cpp/libcamera/: Camera.cpp  Camera.h  CameraAPI.cpp  CameraAPI.h  CameraView.cpp  CameraView.h  Common.cpp  Common.h  DecoderFactory.cpp  DecoderFactory.h  NativeAPI.cpp  NativeAPI.h  OnLoad.cpp
sdk_camera_v4l2/src/main/cpp/libdecoder/: DecodeCreator.cpp  DecodeCreator.h  DecoderHw.cpp  DecoderHw.h  DecoderJp.cpp  DecoderJp.h  DecoderSw.cpp  DecoderSw.h  IDecoder.cpp  IDecoder.h  YUVConvert.cpp  YUVConvert.h
sdk_camera_v4l2/src/main/cpp/source/: Camera.cpp  Camera.h  Common.cpp  Common.h  HwDecoder.cpp  HwDecoder.h  NativeAPI.cpp  NativeAPI.h  OnLoad.cpp
sdk_v4l2_camera/src/main/: AndroidManifest.xml
sdk_v4l2_camera/src/main/assets/: camera_fragment.glsl
(+31 files in other folders)
